Bug 293777 - sys/netinet6/proxy_ndp:pndp_neighbor_advert test fails in CI
Summary: sys/netinet6/proxy_ndp:pndp_neighbor_advert test fails in CI
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: tests (show other bugs)
Version: 16.0-CURRENT
Hardware: Any Any
: --- Affects Only Me
Assignee: Pouria Mousavizadeh Tehrani
URL: https://ci.freebsd.org/job/FreeBSD-ma...
Keywords: regression
Depends on:
Blocks:
 
Reported: 2026-03-13 01:39 UTC by Siva Mahadevan
Modified: 2026-03-13 11:45 UTC (History)
5 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Siva Mahadevan freebsd_committer freebsd_triage 2026-03-13 01:39:53 UTC
The 'sys/netinet6/proxy_ndp:pndp_neighbor_advert' testcase is currently failing in CI:


===> sys/netinet6/ndp:ndp_prefix_lifetime_extend 
Result:     failed: Expiry time was shortened: 20 <= 19 
 
Standard output: 
linkmtu=0, maxmtu=1500, curhlim=64, basereachable=30s0ms, reachable=31s, retrans=1s0ms
Flags: nud auto_linklocal stableaddr 
Executing command [ jexec v6t-pndp_neighbor_advert_a ndp -s 2001:db8::aaaa 1a:b1:96:f4:87:74 proxy ]
linkmtu=0, maxmtu=1500, curhlim=64, basereachable=30s0ms, reachable=28s, retrans=1s0ms
Flags: nud auto_linklocal stableaddr 
PING(56=40+8+8 bytes) 2001:db8::2 --> 2001:db8::aaaa

--- 2001:db8::aaaa ping statistics ---
1 packets transmitted, 0 packets received, 100.0% packet loss
Executing command [ jexec v6t-pndp_neighbor_advert_b ndp -an ]
 
Standard error: 
Fail: regexp 2001:db8::aaaa +1a:b1:96:f4:87:74 +epair0b not in stdout
Neighbor                             Linklayer Address  Netif Expire    S Flags
2001:db8::aaaa                       (incomplete)      epair0b 1s        I 
2001:db8::2                          86:79:fb:2b:85:3d epair0b permanent R 
fe80::8479:fbff:fe2b:853d%epair0b    86:79:fb:2b:85:3d epair0b permanent R 


This is reproducible using Bricoler (master-python branch) with the following command:

bricoler freebsd-regression-test-suite --freebsd-src-git-checkout/url=/usr/src --freebsd-src-git-checkout/branch= --freebsd-regression-test-suite/memory=4096 --freebsd-regression-test-suite/ncpus=2 --freebsd-regression-test-suite/parallelism=1 --freebsd-regression-test-suite/tests='sys/netinet6/proxy_ndp:pndp_neighbor_advert'

pouria@, I bisected this failure to your commit https://cgit.freebsd.org/src/commit/?id=f37fbe30f559acfb269f67d3efe59569878a3ee1 (ndp: implement delayed anycast and proxy NA), please triage as necessary.
Comment 1 Pouria Mousavizadeh Tehrani freebsd_committer freebsd_triage 2026-03-13 08:00:36 UTC
I'll update the tests.

Thank you Siva.
Comment 2 Pouria Mousavizadeh Tehrani freebsd_committer freebsd_triage 2026-03-13 10:12:36 UTC
It's a panic.
I thought only NA proxy tests are failing.
I'm working on that.
Comment 3 commit-hook freebsd_committer freebsd_triage 2026-03-13 11:42:20 UTC
A commit in branch main references this bug:

URL: https://cgit.FreeBSD.org/src/commit/?id=75f1665f33463e9ee0aaa63af0a875e6c46f8755

commit 75f1665f33463e9ee0aaa63af0a875e6c46f8755
Author:     Pouria Mousavizadeh Tehrani <pouria@FreeBSD.org>
AuthorDate: 2026-03-13 11:36:04 +0000
Commit:     Pouria Mousavizadeh Tehrani <pouria@FreeBSD.org>
CommitDate: 2026-03-13 11:36:04 +0000

    ndp: Fix free after use and exclude delayed proxy

    PR:     293777
    Fixes:  f37fbe30f559 ("ndp: implement delayed ...")

 sys/netinet6/nd6_nbr.c | 22 ++++++++++++----------
 1 file changed, 12 insertions(+), 10 deletions(-)
Comment 4 Pouria Mousavizadeh Tehrani freebsd_committer freebsd_triage 2026-03-13 11:45:50 UTC
Done.

[root@ftsr1] [~] # kyua test -k /usr/tests/Kyuafile sys/netinet6/ndp
sys/netinet6/ndp:ndp_add_gu_success  ->  passed  [1.946s]
sys/netinet6/ndp:ndp_del_gu_success  ->  passed  [2.730s]
sys/netinet6/ndp:ndp_prefix_len_mismatch  ->  passed  [2.058s]
sys/netinet6/ndp:ndp_prefix_lifetime  ->  passed  [16.016s]
sys/netinet6/ndp:ndp_prefix_lifetime_extend  ->  passed  [0.111s]
sys/netinet6/ndp:ndp_slaac_default_route  ->  passed  [4.849s]

Results file id is usr_tests.20260313-114232-829334
Results saved to /root/.kyua/store/results.usr_tests.20260313-114232-829334.db

6/6 passed (0 broken, 0 failed, 0 skipped)
[root@ftsr1] [~] # kyua test -k /usr/tests/Kyuafile sys/netinet6/proxy_ndp
sys/netinet6/proxy_ndp:pndp_add_gu_success  ->  passed  [2.123s]
sys/netinet6/proxy_ndp:pndp_del_gu_success  ->  passed  [6.599s]
sys/netinet6/proxy_ndp:pndp_ifdestroy_success  ->  passed  [2.524s]
sys/netinet6/proxy_ndp:pndp_neighbor_advert  ->  passed  [5.292s]

Results file id is usr_tests.20260313-114324-090383
Results saved to /root/.kyua/store/results.usr_tests.20260313-114324-090383.db

4/4 passed (0 broken, 0 failed, 0 skipped)