ndp: Fix free after use and exclude delayed proxy

PR:	293777
Fixes:	6481cfd46b38 ("ndp: implement delayed ...")